[package]
name = "fonet-server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
log = "0.4.27"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.88.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-postgres = "0.7.13"
dotenv = "0.15.0"
axum = { version = "0.8.4", features = ["multipart"] }
serde_json = "1.0.140"
tokio-util = "0.7.15"
env_logger = "0.11.8"
