[package]
name = "font-app-server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
log = "0.4.27"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.88.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1"] }
dotenv = "0.15.0"
axum = { version = "0.8.4", features = ["multipart", "ws", "macros"] }
serde_json = "1.0.140"
tokio-util = "0.7.15"
env_logger = "0.11.8"
tower-http = { version="0.6.4", features = ["limit","cors"]}
axum-util = "0.2.2"
oauth2 = "5.0.0"
serde = { version = "1.0.219", features = ["derive"]}
reqwest = { version = "0.12.18", features = ["json"] }
jwt = "0.16.0"
jsonwebtoken = "9.3.1"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
async-trait = "0.1.88"
ttf-parser = "0.25.1"
blake3 = "1.8.2"
futures-util = "0.3.31"
futures-channel = "0.3.31"
